[package]
name = "wicrs_api"
version = "0.2.1"
authors = ["willemml <willem@leit.so>"]
edition = "2018"
license = "GPL-3.0"
description = "Client API for wirc_server."
repository = "https://github.com/wicrs/api"

[dependencies]
wicrs_server = { path = "../server" }
tokio = { version = "1.5", default-features = false, features = [
    "macros",
    "fs",
    "sync",
    "rt",
    "rt-multi-thread",
] }
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "multipart",
    "default-tls",
] }
tokio-tungstenite = "0.15"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures-util = "0.3"
